--- a/forget.html
+++ b/forget.html
@@ -23,7 +23,7 @@
                 <li> <a href="">Tools</a></li>
                 <li> <a href="">How to use</a></li>
                 <li> <a href="signin.html">Login</a></li>
-                <li> <a id="Su" href="index.html">Sign Up</a></li>
+                <li> <a id="Su" href="signup.html">Sign Up</a></li>
             </ul>
         </div>
     </div>
@@ -37,7 +37,7 @@
                 <li> <a href="">Tools</a></li>
                 <li> <a href="">How to use</a></li>
                 <li> <a href="signin.html">Login</a></li>
-<li> <a id="Su" href="index.html">Sign Up</a></li>
+<li> <a id="Su" href="signup.html">Sign Up</a></li>
             </ul>
         </div>
 </div>
