--- a/privacy.html
+++ b/privacy.html
@@ -28,7 +28,7 @@
                 <li> <a href="">About</a></li>
                 <li> <a href="">Services</a></li>
                 <li> <a href="">Contacts</a></li>
-                <li> <a id="signup" href="index.html">Sign Up</a></li>
+                <li> <a id="signup" href="signup.html">Sign Up</a></li>
                 <li> <a id="login" href="signin.html">Login</a></li>
             </ul>
         </div>
@@ -43,7 +43,7 @@
                 <li> <a href="">About</a></li>
                 <li> <a href="">Services</a></li>
                 <li> <a href="">Contacts</a></li>
-                <li> <a id="signup" href="index.html">Sign Up</a></li>
+                <li> <a id="signup" href="signup.html">Sign Up</a></li>
                 <li> <a id="login" href="signin.html">Login</a></li>
             </ul>
         </div>
