--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
 </div>
 
         
-        <div class="fstCont"> <h2>Convienient Technique to Chunk your large Files</h2> <p>All the tools you need to split your Dataset to Chunks</p> <a href="index.html" class="button">Get Started</a> </div>
+        <div class="fstCont">
+            <h2>Convienient Technique to Chunk your large Files</h2>
+            <p>All the tools you need to split your Dataset to Chunks</p>
+            <a href="index.html" class="button">Get Started</a> 
+    </div>
                 
      <div class="sndCont">
          <h3>What We Do</h3>
