--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
             <div class="csvinfo">
                 <h4>CSV</h4>
                 <p>CSV or Comma Seperated Values is widely used for tabular data and often associated to spreadsheet applications like Excel. Many data reporting tools output to CSV format</p>
-       <a class="button" id="button" href="">Learn More</a>
+                <button id="button">Learn More</button>
             </div>
             
             <div class="jsoninfo">
                 <h4>JSON</h4>
                 <p>JSON stands for JavaScript Object Notation and has become the defacto computer format readable by humans to store structured data. From API's to configuration files, JSON is now everywhere</p>
-       <a id="button" class="button" href="">Learn More</a>
+                <button id="button">Learn More</button>
             </div>  
         </div>
     <div class="img">
