--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
        <span><h3>About Data Format</h3></span>
         <div class="info">
             <div class="csvinfo">
-                <h4>CSV</h4>
+                <span><h4>CSV</h4></span>
                 <p>CSV or Comma Seperated Values is widely used for tabular data and often associated to spreadsheet applications like Excel. Many data reporting tools output to CSV format</p>
                 <button id="button">Learn More</button>
             </div>
             
             <div class="jsoninfo">
-                <h4>JSON</h4>
+                <span><h4>CSV</h4></span>
                 <p>JSON stands for JavaScript Object Notation and has become the defacto computer format readable by humans to store structured data. From API's to configuration files, JSON is now everywhere</p>
                 <button id="button">Learn More</button>
             </div>  
