--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
             
             <div class="jsoninfo">
-                <span><h4>CSV</h4></span>
+                <span><h4>JSON</h4></span>
                 <p>JSON stands for JavaScript Object Notation and has become the defacto computer format readable by humans to store structured data. From API's to configuration files, JSON is now everywhere</p>
                 <button id="button">Learn More</button>
             </div>  
