--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
                  <a href="">Contact Us</a></div>
                 <div>
                     <p>ChunkFile</p>
-                    <p>Split your CSV and JSON file with ease</p>
+<!--                     <p>Split your CSV and JSON file with ease</p> -->
                 </div>
             </div>
-            <div class="footer2">
+            <div style="display: flex; justify-content: space-between;">
                 <div>
                 <a href="">Home</a>
                  <a href="">About</a>
@@ -129,9 +129,9 @@
                     <p>Split your CSV and JSON file with ease</p>
                 </div>
             </div>
-            <div>
+            <div style="display: flex; justify-content: space-between;">
                 <p>@2022 ChunkFile. All rights reserved</p?
-                 <p>&copy copyright</p?
+                <span><p>&copy copyright</p?</span>
             </div>
         </footer>
     
