--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                  <a href="">Contact Us</a></div>
                 <div>
                     <p>ChunkFile</p>
-<!--                     <p>Split your CSV and JSON file with ease</p> -->
+                    <p>Split your CSV and JSON file with ease</p>
                 </div>
             </div>
             <div style="display: flex; justify-content: space-between;">
