--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="fstCont">
             <h2>Convienient Technique to Chunk your large Files</h2>
             <p>All the tools you need to split your Dataset to Chunks</p>
-            <a href="index.html" class="button">Get Started</a> 
+            <a href="signup.html" class="button">Get Started</a> 
     </div>
                 
      <div class="sndCont">
@@ -127,8 +127,8 @@
                 </div>
             </div>
             <div style="display: flex; justify-content: space-between;">
-                <p>@2022 ChunkFile. All rights reserved</p?
-                <span><p>&copy copyright</p?</span>
+                <p>@2022 ChunkFile. All rights reserved</p>
+                <span><p>&copy copyright</p></span>
             </div>
         </footer>
     
