--- a/chunkpg.html
+++ b/chunkpg.html
@@ -18,9 +18,9 @@
    <div class="nav-links">
         <ul>
                 <li><img class="icon" src="images/home.svg" alt=""> <a href="">Home</a></li>
-                <li><img id="icon" class="icon" src="images/file.svg" alt=""> <a href="">Chunk File</a></li>
+                <li><img class="icon" src="images/file.svg" alt=""> <a id="icon"  href="">Chunk File</a></li>
                 <li><img class="icon" src="images/globe.svg" alt=""> <a href="">History</a></li>
-                <li><img class="icon" src="images/download.svg" alt=""><a href="">Download</a></li>
+                <li><img class="icon" src="images/download.svg" alt=""><a id="dwnld" href=""> Download</a></li>
                 <li><img class="icon" src="images/call.svg" alt=""> <a href="contactus.html">Contact Us</a></li>
                                 
             </ul>
