--- a/chunkpg.html
+++ b/chunkpg.html
@@ -17,10 +17,10 @@
               
    <div class="nav-links">
         <ul>
-                <li><img class="icon" src="images/home.svg" alt=""> <a href="">Home</a></li>
-                <li><img class="icon" src="images/file.svg" alt=""> <a id="icon"  href="">Chunk File</a></li>
+                <li><img class="icon" src="images/home.svg" alt=""> <a href="dashboard.html">Home</a></li>
+                <li><img class="icon" src="images/file.svg" alt=""> <a id="icon"  href="chunkpg.html">Chunk File</a></li>
                 <li><img class="icon" src="images/globe.svg" alt=""> <a href="">History</a></li>
-                <li><img class="icon" src="images/download.svg" alt=""><a id="dwnld" href=""> Download</a></li>
+                <li><img class="icon" id="dicon" src="images/download.svg" alt=""><a id="dwnld" href="" onclick="popup() ;return myFunction()">Download</a></li>
                 <li><img class="icon" src="images/call.svg" alt=""> <a href="contactus.html">Contact Us</a></li>
                                 
             </ul>
