--- a/forget.html
+++ b/forget.html
@@ -19,7 +19,7 @@
    <div class="nav-links">
        
             <ul>
-                <li> <a href="">Chunk File</a></li>
+                <li> <a href="chunkpg.html">Chunk File</a></li>
                 <li> <a href="">Tools</a></li>
                 <li> <a href="">How to use</a></li>
                 <li> <a href="signin.html">Login</a></li>
@@ -33,7 +33,7 @@
 
         <div id="sidebar" class="side-bar">
             <ul>
-                <li> <a href="">Chunk File</a></li>
+                <li> <a href="chunkpg.html">Chunk File</a></li>
                 <li> <a href="">Tools</a></li>
                 <li> <a href="">How to use</a></li>
                 <li> <a href="signin.html">Login</a></li>
