--- a/dashboard.html
+++ b/dashboard.html
@@ -22,7 +22,7 @@
                 <li><img class="icon" src="images/home.svg" alt=""> <a id="home" href="dashboard.html">Home</a></li>
                 <li><img  class="icon" src="images/file.svg" alt=""> <a href="chunkpg.html">Chunk File</a></li>
                 <li><img class="icon" src="images/globe.svg" alt=""> <a href="">History</a></li>
-                <li><img class="icon" src="images/download.svg" alt=""><a href=""> Download</a></li>
+                <li><img class="icon" id="dicon" src="images/download.svg" alt=""><a href="">Download</a></li>
                 <li><img class="icon" src="images/call.svg" alt=""> <a href="contactus.html">Contact Us</a></li>
                                 
             </ul>
