--- a/privacy.html
+++ b/privacy.html
@@ -24,10 +24,10 @@
           <div class="nav-links">
        
             <ul>
-                <li> <a href="">Home</a></li>
+                <li> <a href="dashboard.html">Home</a></li>
                 <li> <a href="">About</a></li>
                 <li> <a href="">Services</a></li>
-                <li> <a href="">Contacts</a></li>
+                <li> <a href="contactus.html">Contacts</a></li>
                 <li> <a id="signup" href="signup.html">Sign Up</a></li>
                 <li> <a id="login" href="signin.html">Login</a></li>
             </ul>
@@ -39,10 +39,10 @@
 
         <div id="sidebar" class="side-bar">
             <ul>
-                <li> <a href="">Home</a></li>
+                <li> <a href="dashboard.html">Home</a></li>
                 <li> <a href="">About</a></li>
                 <li> <a href="">Services</a></li>
-                <li> <a href="">Contacts</a></li>
+                <li> <a href="contactus.html">Contacts</a></li>
                 <li> <a id="signup" href="signup.html">Sign Up</a></li>
                 <li> <a id="login" href="signin.html">Login</a></li>
             </ul>
