--- a/signin.html
+++ b/signin.html
@@ -22,7 +22,7 @@
           <div class="content">
               <h2>Welcome back to our space!</h2>
               
-              <form action="">
+              <form action="dashboard.html">
                   
                 <label>Email Address</label><br>
           <input type="email" placeholder="mercyjohnson@yahoo.com" required><br>
